# wq_data_pipeline

./: README.md  Simple_SaQC_implementer.py  environment.yml  pyproject.toml
scripts/: cli.py  icons_for_report.py  sentemqc.py  ufz_water_qc_pipeline.py
scripts/water_qc_output/processed/Erkenruh_Einruhr/: Erkenruh_Einruhr__qc_timeseries.parquet
scripts/water_qc_output/reports/tables/Erkenruh_Einruhr/: Erkenruh_Einruhr__events_all.csv  Erkenruh_Einruhr__meta.csv  Erkenruh_Einruhr__seasonal_all.csv  SurfaceWaterConcentration_NO3_Trios_mg_L-1__events.csv  SurfaceWaterConcentration_NO3_Trios_mg_L-1__seasonal_summary.csv  SurfaceWaterConcentration_NO3_YSI_mg_L-1__events.csv  SurfaceWaterConcentration_NO3_YSI_mg_L-1__seasonal_summary.csv  SurfaceWaterConcentration_O2_mg_L-1__events.csv  SurfaceWaterConcentration_O2_mg_L-1__seasonal_summary.csv  SurfaceWaterTurbidity_NTU__events.csv  SurfaceWaterTurbidity_NTU__seasonal_summary.csv  SurfaceWaterpH_pH__events.csv  SurfaceWaterpH_pH__seasonal_summary.csv
